fixed navbar z-index

--- a/src/app/projects/projects.less
+++ b/src/app/projects/projects.less
@@ -40,7 +40,7 @@ must be ul/li
   }
 
   .rn-carousel-container {
-    margin: 0 -20px 10px;
+    margin: 0 -10px 10px;
   }
 
 }
