--- a/src/assets/inline.css
+++ b/src/assets/inline.css
@@ -22,6 +22,7 @@ footer {
   margin-bottom: 10px;
   margin-left: 0px;
   border-bottom: 1px solid #cdcdcd;
+  z-index: 9999;
 }
 
 .csstransforms3d.csstransitions .nav-collapse {
