--- a/src/less/main.less
+++ b/src/less/main.less
@@ -189,6 +189,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f3f3', end
     margin-right: 0px;
     margin-left: 0px;
     border-bottom: 1px solid @grayLighter;
+    z-index: 9999;
 }
 
 .csstransforms3d.csstransitions .nav-collapse {
